Add: Ability to save the Employee Payroll Object to Local Storage.

--- a/Pages/addEmployee.html
+++ b/Pages/addEmployee.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../css/addEmployee.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
     <title>Employee Payroll Form</title>
-    <script type="text/JavaScript" src="../js/addEmployee.js"></script>
     <script type="text/JavaScript" src="../js/EmployeePayrollData.js"></script>
 </head>
 
@@ -147,6 +146,7 @@
                         <option value="2017">2017</option>
                         <option value="2016">2016</option>
                     </select>
+                    <error-output class="date-error"></error-output>
                 </div>
                 </div>
                 <div class="row-content">
