Add: Ability to reset the form on clicking reset

--- a/Pages/addEmployee.html
+++ b/Pages/addEmployee.html
@@ -23,7 +23,7 @@
 
     </header>
     <div class="form-content">
-        <form action="#" class="form" onsubmit="save();return false">
+        <form action="#" class="form" onreset="resetForm()" onsubmit="save();return false">
             <div class="form-head">
                 Employee Payroll Form</div>
             <div class="row-content">
